src/test/deca/context/invalid/homeMade/tests/test_print331/test_print331_2.deca
// test invalide de la règle 3.31


{
    println(int a = 7;);
}
